# libmatewnck

./: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.ac  libmatewnck-1.0-uninstalled.pc.in  libmatewnck-1.0.pc.in  libmatewnck-uninstalled.pc.in  libmatewnck.pc.in
.tx/: config
doc/: Makefile.am  Makefile.in  libmatewnck-docs.sgml  libmatewnck-sections.txt  libmatewnck.types
doc/html/: MateWnckApplication.html  MateWnckClassGroup.html  MateWnckPager.html  MateWnckScreen.html  MateWnckSelector.html  MateWnckTasklist.html  MateWnckWindow.html  MateWnckWorkspace.html  MatewnckApplication.html  MatewnckClassGroup.html  MatewnckPager.html  MatewnckScreen.html  MatewnckSelector.html  MatewnckTasklist.html  MatewnckWindow.html  MatewnckWorkspace.html  WnckApplication.html  WnckClassGroup.html  WnckPager.html  WnckScreen.html  WnckSelector.html  WnckTasklist.html  WnckWindow.html  WnckWorkspace.html  core.html  index.html  index.sgml  indexes.html  intro.html  ix01.html  ix02.html  ix03.html  ix04.html  ix05.html  ix06.html  ix07.html  ix08.html  ix09.html  ix10.html  ix11.html  (+14 more)
doc/tmpl/: application.sgml  class-group.sgml  misc.sgml  pager.sgml  resource.sgml  screen.sgml  selector.sgml  tasklist.sgml  util.sgml  version.sgml  window-action-menu.sgml  window.sgml  workspace.sgml
libmatewnck/: Makefile.am  TODO  application.c  application.h  class-group.c  class-group.h  libmatewnck.h  matewnck-enum-types.c  matewnck-enum-types.h  matewnck-marshal.c  matewnck-marshal.h  matewnck-urgency-monitor.c  matewnckprop.c  pager-accessible-factory.c  pager-accessible-factory.h  pager-accessible.c  pager-accessible.h  pager.c  pager.h  private.h  screen.c  screen.h  selector.c  selector.h  tasklist.c  tasklist.h  test-matewnck.c  test-pager.c  test-selector.c  test-tasklist.c  test-urgent.c  util.c  util.h  version.h  version.h.in  window-action-menu.c  window-action-menu.h  window.c  window.h  workspace-accessible-factory.c  (+7 more)
libwnck/: Makefile.in  TODO  version.h  wnck-enum-types.c  wnck-enum-types.h  wnck-marshal.c
po/: LINGUAS  POTFILES.in  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  (+53 more)
